manifest/objects/LVGO__Account__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__Open_Cross_Sell_Opportunity_Count__c</fullName>
        <label>Open Cross-Sell Opportunity Count</label>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__Type__c</field>
            <operation>equals</operation>
            <value>Cross-sell (New product)</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Selling, Proposal, VOC, Contracting</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Open_Enrollment_Date__c</fullName>
        <label>Open Enrollment Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Open_Enrollment_Period__c</fullName>
        <description>Client Stats</description>
        <label>Open Enrollment Period</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Open_Opportunity_Count__c</fullName>
        <description>The number of open opportunities associated with this account</description>
        <label>Open Opportunity Count</label>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Selling, Proposal, VOC, Contracting</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__Type__c</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Open_Opportunity_PwDs__c</fullName>
        <label>Open Opportunity PwDs</label>
        <summarizedField>LVGO__Opportunity__c.LVGO__Livongo_for_Diabetes_PwDs__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Selling, Proposal, VOC, Contracting</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__Type__c</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Open_Renewal_Opportunity_Count__c</fullName>
        <label>Open Renewal Opportunity Count</label>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__Type__c</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Selling, Proposal, VOC, Contracting</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Other_CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LVGO_Other_CSM_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Overall_Account_Score__c</fullName>
        <label>Overall Account Score</label>
        <summarizedField>LVGO__Health_Score__c.LVGO__Score__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__Health_Score__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Account Health Score</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Health_Score__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Overall_DM_Score__c</fullName>
        <label>Overall DM Score</label>
        <summarizedField>LVGO__Health_Score__c.LVGO__Score__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__Health_Score__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Program Health Score</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Health_Score__c.LVGO__Program__c</field>
            <operation>equals</operation>
            <value>Diabetes</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Health_Score__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Overall_HTN_Score__c</fullName>
        <label>Overall HTN Score</label>
        <summarizedField>LVGO__Health_Score__c.LVGO__Score__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__Health_Score__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Program Health Score</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Health_Score__c.LVGO__Program__c</field>
            <operation>equals</operation>
            <value>Hypertension</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Health_Score__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__PBM_Partner_Pipeline_Request__c</fullName>
        <inlineHelpText>Enter data into this field if you&apos;d like to engage the partner team to help with this deal, through a pipeline call review, etc.
Format: (Date - Partner Name - Request Details)</inlineHelpText>
        <label>Partner Pipeline Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__PO_WholePerson__c</fullName>
        <description>If 1, then at least 1 Opportunity has a Whole Person OLI</description>
        <label>PO#_WholePerson</label>
        <summarizedField>LVGO__Opportunity__c.LVGO__PO_WholePerson__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__Type__c</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>LVGO__Account__c</referenceTo>
        <relationshipName>Child_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Payer_Lines_of_Business__c</fullName>
        <label>Payer Lines of Business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACA</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Provider Sponsored</fullName>
                </value>
                <value>
                    <fullName>Medicare-Medicaid Plan (MMP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Payer_Sales_Cycle__c</fullName>
        <label>Payer Sales Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet engaged</fullName>
                </value>
                <value>
                    <fullName>Initial conversations</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>RFP Process</fullName>
                </value>
                <value>
                    <fullName>Contract negotiation</fullName>
                </value>
                <value>
                    <fullName>Contract signed -- Active Partner</fullName>
                </value>
                <value>
                    <fullName>Not interested currently/Declined/Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LVGO__Plan_Year_Start_Month__c</fullName>
        <inlineHelpText>What month does the Client Health Plan year start?</inlineHelpText>
        <label>Plan Year Start Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Power_of_1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Accts_PO1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Primary_CS_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary CS Point of Contact</label>
        <referenceTo>LVGO__Contact__c</referenceTo>
        <relationshipLabel>Accounts (Primary CS Point of Contact)</relationshipLabel>
        <relationshipName>LVGO_Primary_CS_POC_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Prior_Account_Status__c</fullName>
        <description>JENGA-1279</description>
        <label>Prior Account Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Prior_Year_Number_of_Employees__c</fullName>
        <label>Prior Year Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Prior_Year_Revenue__c</fullName>
        <label>Prior Year Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_Count3__c</fullName>
        <formula>if(text( LVGO__Closed_Won_Livongo_For_Diabetes_PwD_Sum__c )&lt;&gt;&quot;0&quot;,1,0)+if(text( LVGO__PwH_Sold__c )&lt;&gt;&quot;0&quot;,1,0)+if(text( LVGO__PwWM_DPP_Sold__c )&lt;&gt;&quot;0&quot;,1,0)+if(text( LVGO__PwWM_Sold__c )&lt;&gt;&quot;0&quot;,1,0)+if(text( LVGO__PwDPP_Sold__c )&lt;&gt;&quot;0&quot;,1,0)+if(text( LVGO__PwBH_Sold__c )&lt;&gt;&quot;0&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_Overview_Count_Term_Exp__c</fullName>
        <inlineHelpText>Program Implementation Status = Terminated, Expired, or Ongoing Delivery Total</inlineHelpText>
        <label>Program Overview Count_Term/Exp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_Overview_Count_Upcoming__c</fullName>
        <inlineHelpText>Program Implementation Status = Implementation or Contracting</inlineHelpText>
        <label>Program Overview Count_Upcoming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_Overview_Count__c</fullName>
        <inlineHelpText>Program Implementation Status = Launched + 90 or On-going Delivery</inlineHelpText>
        <label>Program Overview Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Prospect_Update_Next_Steps__c</fullName>
        <label>Prospect Update &amp; Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Provider_Sponsored_Population__c</fullName>
        <label>Provider Sponsored Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__PwBH_Sold__c</fullName>
        <label>PwBH Sold</label>
        <summarizedField>LVGO__Opportunity__c.LVGO__Livongo_Behavioral_Health_PwBHs__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__Type__c</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__PwDPP_Sold__c</fullName>
        <label>PwDPP Sold</label>
        <summarizedField>LVGO__Opportunity__c.LVGO__Livongo_DPP_PwPDs__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__Type__c</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__PwH_Sold__c</fullName>
        <label>PwH Sold</label>
        <summarizedField>LVGO__Opportunity__c.LVGO__Livongo_for_Hypertension_PwHs__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__Type__c</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__PwO_Sold__c</fullName>
        <label>PwO Sold</label>
        <summarizedField>LVGO__Opportunity__c.LVGO__Livongo_for_Weight_Management_DP_PwOs__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__Type__c</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__PwWM_DPP_Sold__c</fullName>
        <label>PwWM+DPP Sold</label>
        <summarizedField>LVGO__Opportunity__c.LVGO__Livongo_for_Weight_Management_DP_PwOs__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__Type__c</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__PwWM_Sold__c</fullName>
        <label>PwWM Sold</label>
        <summarizedField>LVGO__Opportunity__c.LVGO__Livongo_WM_PwWMs__c</summarizedField>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__StageName__c</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LVGO__Opportunity__c.LVGO__Type__c</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>LVGO__Opportunity__c.LVGO__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__RPwDs_from_Claims_Data__c</fullName>
        <label>RPwDs from Claims</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__RPwHs_from_Claims__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>RPwHs from Claims</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Lukewarm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Reduction_in_A1c_Actual__c</fullName>
        <inlineHelpText>Updated by Sales Ops. If you see a problem, please contact SalesOps@livongo.com</inlineHelpText>
        <label>Reduction in A1c - Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Reference_Account__c</fullName>
        <description>Marketing</description>
        <label>Client willing to serve as reference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Reference_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__RegCodes__c</fullName>
        <label>RegCodes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__RequestCIM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox, when checked, will create a task assigned to Client Implementation Director for purposes of assigning a CIM to this Account.</description>
        <inlineHelpText>Checkbox, when checked, will create a task assigned to Client Implementation Director for purposes of assigning a CIM to this Account.</inlineHelpText>
        <label>Request CIM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__RequestCSM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox, when checked, will create a task assigned to Client Success Director for purposes of assigning a CSM to this Account.</description>
        <inlineHelpText>Checkbox, when checked, will create a task assigned to Client Success Director for purposes of assigning a CSM to this Account.</inlineHelpText>
        <label>Request CSM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Risk_Color__c</fullName>
        <label>Risk Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black - Leaving Livongo</fullName>
                    <color>#000000</color>
                    <label>Black - Leaving Livongo</label>
                </value>
                <value>
                    <fullName>Green - Retaining the Client</fullName>
                    <color>#33FF33</color>
                    <label>Green - Retaining the Client</label>
                </value>
                <value>
                    <fullName>Yellow - Intent Expressed</fullName>
                    <color>#FFFF66</color>
                    <label>Yellow - Intent Expressed</label>
                </value>
                <value>
                    <fullName>Red - No Clear Intent Expressed</fullName>
                    <color>#FF0000</color>
                    <label>Red - No Clear Intent Expressed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Risk_Description__c</fullName>
        <label>Risk Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LVGO__Risk_Color__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Unhappy client - Terming and we have tried literally everything</fullName>
                </value>
                <value>
                    <fullName>Acquired and no path forward with new parent company</fullName>
                </value>
                <value>
                    <fullName>Renewal CCS Received (5/1/2020 or later) for TDC</fullName>
                </value>
                <value>
                    <fullName>Contracted directly and signed</fullName>
                </value>
                <value>
                    <fullName>Redlines in progress and full intent from client to renew direct</fullName>
                </value>
                <value>
                    <fullName>Redlines in progress and full intent from client to renew through other partner</fullName>
                </value>
                <value>
                    <fullName>Intent to go direct and not renew</fullName>
                </value>
                <value>
                    <fullName>Intent to contract through other partner and not renew</fullName>
                </value>
                <value>
                    <fullName>Intent to move to ngTDC</fullName>
                </value>
                <value>
                    <fullName>Intent to renew on TDC paper &amp; evaluate alternative contracting paths to stay with Livongo for 2022 and beyond and CAN contract direct - no paperwork received yet</fullName>
                </value>
                <value>
                    <fullName>Intent to renew on TDC paper &amp; evaluate alternative contracting paths to stay with Livongo for 2022 and beyond and CANNOT contract direct - no paperwork received yet</fullName>
                </value>
                <value>
                    <fullName>Intent to renew on TDC paper &amp; no other intent stated and have not received paperwork yet</fullName>
                </value>
                <value>
                    <fullName>No discussions with client or consultant after multiple outreaches</fullName>
                </value>
                <value>
                    <fullName>Recent launch/renewal, no commitment to renew</fullName>
                </value>
                <value>
                    <fullName>Spoke with client and they are not happy with Livongo</fullName>
                </value>
                <value>
                    <fullName>Conversation had but no clear intent - Met with client / consultant and discussed contracting path options but no commitment yet</fullName>
                </value>
                <value>
                    <fullName>Conversation had but no clear intent - Met with AE and they verbally said they will not be pushing ngTDC to the client right now</fullName>
                </value>
                <value>
                    <fullName>Conversation had but no clear intent - Met with Client/AE/Consultant  and discussed changes and were interested in making changes to direct or partner but did not commit yet</fullName>
                </value>
                <value>
                    <fullName>Out to RFP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__SPS_Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPS Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LVGO_SPS_ProgramManager_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__S_P_500__c</fullName>
        <externalId>true</externalId>
        <label>S&amp;P 500</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Savings_PPPM_ROI_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Updated by Client Success. If you see a problem, please contact the Account&apos;s CSM.</inlineHelpText>
        <label>Savings PPPM (ROI) - Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__ShippingAddress__c</fullName>
        <label>ShippingAddress</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Shipping_Address_Custom__c</fullName>
        <label>Shipping Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>LVGO__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Shipping_State_Backend__c</fullName>
        <label>Shipping State(Backend)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Shipping_State_Province__c</fullName>
        <label>Shipping State/Province</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Shipping_Zip_Postal_Code__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__SicDesc__c</fullName>
        <label>SicDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Sic__c</fullName>
        <label>Sic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Single_or_Multi_Program2__c</fullName>
        <label>Single or Multi Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Program</fullName>
                </value>
                <value>
                    <fullName>Multi Program</fullName>
                </value>
                <value>
                    <fullName>Whole Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Site__c</fullName>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Source_ID__c</fullName>
        <label>Source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TD</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>ITH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Split_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JENGA-1323</description>
        <label>Split Billing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__TD_Acct_Guid__c</fullName>
        <description>Cloning TDH__Acct_Guid__c from TDH GuidPackage</description>
        <externalId>true</externalId>
        <label>TD Acct Guid</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Target_payer_close_date__c</fullName>
        <label>MSA Target Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Termination_Forecast_Date__c</fullName>
        <description>Created as part of JENGA-1268</description>
        <label>Termination Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Termination_Rationale_Summary__c</fullName>
        <description>Jenga # 1393</description>
        <label>Termination Rationale Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>